--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <span class="driverName"></span>
     <span class="driverConstructor"></span>
     <span class="driverPoints"></span>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
