--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <span class="driverConstructor"></span>
     <span class="driverPoints"></span>
 
-    <script src="/main.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
